// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/1419*css",
  "./dist/css/2281*css",
  "./dist/css/2539*css",
  "./dist/css/3474*css",
  "./dist/css/9709*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/1024*js",
  "./dist/js/1070*js",
  "./dist/js/1223*js",
  "./dist/js/1223*txt",
  "./dist/js/1266*js",
  "./dist/js/1277*js",
  "./dist/js/1290*js",
  "./dist/js/1306*js",
  "./dist/js/1419*js",
  "./dist/js/1468*js",
  "./dist/js/1484*js",
  "./dist/js/1696*js",
  "./dist/js/1742*js",
  "./dist/js/1978*js",
  "./dist/js/202*js",
  "./dist/js/2065*js",
  "./dist/js/2089*js",
  "./dist/js/2281*js",
  "./dist/js/2355*js",
  "./dist/js/2359*js",
  "./dist/js/2468*js",
  "./dist/js/2472*js",
  "./dist/js/2539*js",
  "./dist/js/2585*js",
  "./dist/js/2680*js",
  "./dist/js/2789*js",
  "./dist/js/2842*js",
  "./dist/js/2902*js",
  "./dist/js/2984*js",
  "./dist/js/3030*js",
  "./dist/js/3063*js",
  "./dist/js/3063*txt",
  "./dist/js/31*js",
  "./dist/js/3251*js",
  "./dist/js/3396*js",
  "./dist/js/3431*js",
  "./dist/js/3449*js",
  "./dist/js/3473*js",
  "./dist/js/3474*js",
  "./dist/js/3592*js",
  "./dist/js/3664*js",
  "./dist/js/3810*js",
  "./dist/js/3844*js",
  "./dist/js/3896*js",
  "./dist/js/3935*js",
  "./dist/js/3935*txt",
  "./dist/js/4039*js",
  "./dist/js/4144*js",
  "./dist/js/4155*js",
  "./dist/js/4212*js",
  "./dist/js/4414*js",
  "./dist/js/4468*js",
  "./dist/js/4575*js",
  "./dist/js/4591*js",
  "./dist/js/4612*js",
  "./dist/js/4680*js",
  "./dist/js/4687*js",
  "./dist/js/4957*js",
  "./dist/js/5029*js",
  "./dist/js/5037*js",
  "./dist/js/5064*js",
  "./dist/js/5068*js",
  "./dist/js/5265*js",
  "./dist/js/5353*js",
  "./dist/js/5411*js",
  "./dist/js/5594*js",
  "./dist/js/5623*js",
  "./dist/js/5703*js",
  "./dist/js/5824*js",
  "./dist/js/5877*js",
  "./dist/js/5926*js",
  "./dist/js/5938*js",
  "./dist/js/5948*js",
  "./dist/js/5982*js",
  "./dist/js/6061*js",
  "./dist/js/6134*js",
  "./dist/js/6234*js",
  "./dist/js/6357*js",
  "./dist/js/6438*js",
  "./dist/js/6458*js",
  "./dist/js/6715*js",
  "./dist/js/674*js",
  "./dist/js/6788*js",
  "./dist/js/6816*js",
  "./dist/js/6889*js",
  "./dist/js/6894*js",
  "./dist/js/6928*js",
  "./dist/js/6934*js",
  "./dist/js/6990*js",
  "./dist/js/7075*js",
  "./dist/js/7092*js",
  "./dist/js/7133*js",
  "./dist/js/716*js",
  "./dist/js/7235*js",
  "./dist/js/7236*js",
  "./dist/js/7294*js",
  "./dist/js/7294*txt",
  "./dist/js/7355*js",
  "./dist/js/7392*js",
  "./dist/js/7400*js",
  "./dist/js/7508*js",
  "./dist/js/7517*js",
  "./dist/js/7542*js",
  "./dist/js/7793*js",
  "./dist/js/7853*js",
  "./dist/js/7902*js",
  "./dist/js/7912*js",
  "./dist/js/7946*js",
  "./dist/js/810*js",
  "./dist/js/8250*js",
  "./dist/js/8299*js",
  "./dist/js/8398*js",
  "./dist/js/8406*js",
  "./dist/js/8521*js",
  "./dist/js/8537*js",
  "./dist/js/855*js",
  "./dist/js/8725*js",
  "./dist/js/8790*js",
  "./dist/js/8793*js",
  "./dist/js/8816*js",
  "./dist/js/8872*js",
  "./dist/js/8908*js",
  "./dist/js/8920*js",
  "./dist/js/897*js",
  "./dist/js/9219*js",
  "./dist/js/9223*js",
  "./dist/js/9238*js",
  "./dist/js/9303*js",
  "./dist/js/9474*js",
  "./dist/js/9505*js",
  "./dist/js/965*js",
  "./dist/js/9669*js",
  "./dist/js/9669*txt",
  "./dist/js/97*js",
  "./dist/js/9709*js",
  "./dist/js/9730*js",
  "./dist/js/9868*js",
  "./dist/js/987*js",
  "./dist/js/9964*js",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/sourcemaps/1024*map",
  "./dist/sourcemaps/1070*map",
  "./dist/sourcemaps/1223*map",
  "./dist/sourcemaps/1266*map",
  "./dist/sourcemaps/1277*map",
  "./dist/sourcemaps/1290*map",
  "./dist/sourcemaps/1306*map",
  "./dist/sourcemaps/1419*map",
  "./dist/sourcemaps/1484*map",
  "./dist/sourcemaps/1696*map",
  "./dist/sourcemaps/1742*map",
  "./dist/sourcemaps/1978*map",
  "./dist/sourcemaps/202*map",
  "./dist/sourcemaps/2065*map",
  "./dist/sourcemaps/2281*map",
  "./dist/sourcemaps/2355*map",
  "./dist/sourcemaps/2468*map",
  "./dist/sourcemaps/2472*map",
  "./dist/sourcemaps/2539*map",
  "./dist/sourcemaps/2585*map",
  "./dist/sourcemaps/2680*map",
  "./dist/sourcemaps/2789*map",
  "./dist/sourcemaps/2842*map",
  "./dist/sourcemaps/2902*map",
  "./dist/sourcemaps/2984*map",
  "./dist/sourcemaps/3030*map",
  "./dist/sourcemaps/3063*map",
  "./dist/sourcemaps/31*map",
  "./dist/sourcemaps/3251*map",
  "./dist/sourcemaps/3396*map",
  "./dist/sourcemaps/3431*map",
  "./dist/sourcemaps/3449*map",
  "./dist/sourcemaps/3474*map",
  "./dist/sourcemaps/3592*map",
  "./dist/sourcemaps/3664*map",
  "./dist/sourcemaps/3844*map",
  "./dist/sourcemaps/3896*map",
  "./dist/sourcemaps/3935*map",
  "./dist/sourcemaps/4039*map",
  "./dist/sourcemaps/4144*map",
  "./dist/sourcemaps/4155*map",
  "./dist/sourcemaps/4414*map",
  "./dist/sourcemaps/4468*map",
  "./dist/sourcemaps/4575*map",
  "./dist/sourcemaps/4591*map",
  "./dist/sourcemaps/4680*map",
  "./dist/sourcemaps/4687*map",
  "./dist/sourcemaps/4957*map",
  "./dist/sourcemaps/5029*map",
  "./dist/sourcemaps/5037*map",
  "./dist/sourcemaps/5064*map",
  "./dist/sourcemaps/5068*map",
  "./dist/sourcemaps/5265*map",
  "./dist/sourcemaps/5353*map",
  "./dist/sourcemaps/5411*map",
  "./dist/sourcemaps/5594*map",
  "./dist/sourcemaps/5703*map",
  "./dist/sourcemaps/5824*map",
  "./dist/sourcemaps/5877*map",
  "./dist/sourcemaps/5926*map",
  "./dist/sourcemaps/5938*map",
  "./dist/sourcemaps/5948*map",
  "./dist/sourcemaps/5982*map",
  "./dist/sourcemaps/6061*map",
  "./dist/sourcemaps/6134*map",
  "./dist/sourcemaps/6234*map",
  "./dist/sourcemaps/6357*map",
  "./dist/sourcemaps/6438*map",
  "./dist/sourcemaps/6458*map",
  "./dist/sourcemaps/6715*map",
  "./dist/sourcemaps/674*map",
  "./dist/sourcemaps/6788*map",
  "./dist/sourcemaps/6816*map",
  "./dist/sourcemaps/6889*map",
  "./dist/sourcemaps/6894*map",
  "./dist/sourcemaps/6934*map",
  "./dist/sourcemaps/6990*map",
  "./dist/sourcemaps/7092*map",
  "./dist/sourcemaps/7133*map",
  "./dist/sourcemaps/716*map",
  "./dist/sourcemaps/7235*map",
  "./dist/sourcemaps/7294*map",
  "./dist/sourcemaps/7355*map",
  "./dist/sourcemaps/7392*map",
  "./dist/sourcemaps/7508*map",
  "./dist/sourcemaps/7517*map",
  "./dist/sourcemaps/7542*map",
  "./dist/sourcemaps/7793*map",
  "./dist/sourcemaps/7853*map",
  "./dist/sourcemaps/7902*map",
  "./dist/sourcemaps/7912*map",
  "./dist/sourcemaps/7946*map",
  "./dist/sourcemaps/810*map",
  "./dist/sourcemaps/8250*map",
  "./dist/sourcemaps/8398*map",
  "./dist/sourcemaps/8406*map",
  "./dist/sourcemaps/8521*map",
  "./dist/sourcemaps/8537*map",
  "./dist/sourcemaps/855*map",
  "./dist/sourcemaps/8725*map",
  "./dist/sourcemaps/8790*map",
  "./dist/sourcemaps/8793*map",
  "./dist/sourcemaps/8816*map",
  "./dist/sourcemaps/8872*map",
  "./dist/sourcemaps/8908*map",
  "./dist/sourcemaps/8920*map",
  "./dist/sourcemaps/9219*map",
  "./dist/sourcemaps/9223*map",
  "./dist/sourcemaps/9238*map",
  "./dist/sourcemaps/9303*map",
  "./dist/sourcemaps/9474*map",
  "./dist/sourcemaps/9505*map",
  "./dist/sourcemaps/965*map",
  "./dist/sourcemaps/9669*map",
  "./dist/sourcemaps/9709*map",
  "./dist/sourcemaps/9730*map",
  "./dist/sourcemaps/9868*map",
  "./dist/sourcemaps/987*map",
  "./dist/sourcemaps/9964*map",
  "./dist/sourcemaps/App*map",
  "./dist/sourcemaps/exposed-./RootApp*map",
  "./dist/subscriptions*js",
]
`;
